src/test/ui/issues/issue-50264-inner-deref-trait/option-deref.stderr
error[E0599]: no method named `deref` found for type `std::option::Option<{integer}>` in the current scope
  --> $DIR/option-deref.rs:4:29
   |
LL |     let _result = &Some(42).deref();
   |                             ^^^^^
   |
   = note: the method `deref` exists but the following trait bounds were not satisfied:
           `{integer} : std::ops::Deref`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
